--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,6 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
 
     defaultConfig {
         applicationId "com.dongdong.neonplayer"
@@ -77,7 +76,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     /*FireBase DataBase*/
-    implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.google.firebase:firebase-firestore:19.0.0'
     /*Firebase Stroage*/
@@ -100,9 +98,17 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
 
-    implementation 'androidx.multidex:multidex:2.0.1'
-
+    //Event Bus
+    implementation 'com.squareup:otto:1.3.7'
+    
+    //UitTest
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //Zxing Lib
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
